--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@astrojs/mdx": "^4.2.6",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.4.0",
-    "astro": "^5.7.14"
+    "@tailwindcss/vite": "^4.1.7",
+    "astro": "^5.7.14",
+    "tailwindcss": "^4.1.7"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10"
   }
 }
